--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:cjuega/serverless-translate-templateurls.git"
+  },
   "keywords": [
     "Serverless",
     "AWS",
